--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "onsenui": "^2.11.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-onsenui": "^2.6.4",
-    "vue-router": "^3.2.0"
+    "vue-onsenui": "^2.6.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
